I changed to padding instead of height for my display tag to avoid the text overlapping

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
 
 .dis{
     border: 1px solid grey;
-    height: 35px;    
+    padding: 5px;   
     margin-top: 20px;
     margin-bottom: 10px;
     background-color: rgb(165, 218, 206);
